add contact page

--- a/index.html
+++ b/index.html
@@ -1245,9 +1245,6 @@
 
           </div>
 
-
-
-
         </div>
 
         <div class="news--body__hidden news--body__row  aign-items-center justify-content-center flex-wrap"
@@ -1404,7 +1401,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit
               scelerisque
               egestas mu.</p>
-            <a href="https://www.instagram.com/guitarist_06_23/">View More</a>
+            <a href="https://www.instagram.com/guitarist_06_23/" target="blank">View More</a>
 
 
 
