--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant Home</title>
+  <title>Menu</title>
   <link rel="stylesheet" href="../css/bootstrap.min.css">
 
   <!-- *** Owl Corusel *** -->
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  
+
   <div class="loading" id="loading">
     <div class="loader"></div>
   </div>
@@ -812,7 +812,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit
               scelerisque
               egestas mu.</p>
-            <a href="https://www.instagram.com/guitarist_06_23/">View More</a>
+            <a href="https://www.instagram.com/guitarist_06_23/" target="blank">View More</a>
 
 
 
@@ -1014,7 +1014,7 @@
 
 
   <!-- *** Ap-tab *** -->
-  
+
   <script src="https://cdn.jsdelivr.net/gh/abdulazizcreator/ap-tab/main.js"></script>
 
 
