--- a/pages/About.html
+++ b/pages/About.html
@@ -22,10 +22,10 @@
 </head>
 
 <body>
-  <!-- 
+  
   <div class="loading" id="loading">
     <div class="loader"></div>
-  </div> -->
+  </div>
 
   <!-- *** header *** -->
 
